# netcdf4_cxx

./: .travis.yml  CMakeLists.txt  COPYING  README.md
doc/: CMakeLists.txt  Doxyfile.in
include/netcdf/: abstract_dataset.hpp  attribute.hpp  dataset.hpp  dimension.hpp  file.hpp  group.hpp  hyperslab.hpp  object.hpp  type.hpp  variable.hpp
include/netcdf4_cxx/: abstract_dataset.hpp  any.hpp  attribute.hpp  cf.hpp  dataset.hpp  dimension.hpp  file.hpp  group.hpp  hyperslab.hpp  netcdf.hpp  object.hpp  parser.hpp  query.hpp  scale_missing.hpp  type.hpp  units.hpp  variable.hpp
src/: CMakeLists.txt  any.cpp  attribute.cpp  cf.cpp  dataset.cpp  dimension.cpp  file.cpp  group.cpp  object.cpp  parser.cpp  query.cpp  scale_missing.cpp  type.cpp  units.cpp  variable.cpp
test/: CMakeLists.txt  main.cpp  tempfile.hpp  test_attribute.cpp  test_dataset.cpp  test_dimension.cpp  test_file.cpp  test_group.cpp  test_hyperslab.cpp  test_parser.cpp  test_type.cpp  test_variable.cpp
