CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(LIB_VERSION_MAJOR 0)
SET(LIB_VERSION_MINOR 0)
SET(LIB_VERSION_PATCH 1)
SET(LIB_VERSION ${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH})

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_MACOSX_RPATH 1)

PROJECT(libnetcdf4_cxx)

ENABLE_TESTING()

IF(NOT netCDF_LIBRARIES AND NOT netCDF_INCLUDE_DIR)
  FIND_PACKAGE(netCDF QUIET)
ELSE()
  SET(netCDF_FOUND TRUE)
ENDIF()

IF (netCDF_FOUND)
  INCLUDE_DIRECTORIES(SYSTEM ${netCDF_INCLUDE_DIR})
  LINK_DIRECTORIES(${netCDF_LIB_DIR})
  SET(NETCDF_C_LIBRARY ${netCDF_LIBRARIES})
  SET(NETCDF_C_INCLUDE_DIR ${netCDF_INCLUDE_DIR})
ELSE()
  # netCDF not properly packaged. Try to find it manually.
  FIND_LIBRARY(NETCDF_C_LIBRARY NAMES netcdf libnetcdf)
  IF(NOT NETCDF_C_LIBRARY)
    MESSAGE(FATAL_ERROR "libnetcdf not found. Please reinstall and try again.")
  ELSE()
    MESSAGE(STATUS "Found netcdf: ${NETCDF_C_LIBRARY}")
    FIND_PATH(NC_H_INCLUDE_DIR "netcdf.h")
    IF(NOT NC_H_INCLUDE_DIR)
      MESSAGE(FATAL_ERROR "Directory containing netcdf.h cannot be found. Please reinstall and try again.")
    ELSE()
      GET_FILENAME_COMPONENT(netCDF_LIB_DIR "${NETCDF_C_LIBRARY}" REALPATH)
      LINK_DIRECTORIES(${netCDF_LIB_DIR})
      INCLUDE_DIRECTORIES(SYSTEM ${NC_H_INCLUDE_DIR})
    ENDIF()
  ENDIF()
ENDIF()

FIND_PACKAGE(Doxygen)
IF(NOT DOXYGEN_FOUND)
  MESSAGE("Doxygen not found, documentation will not be generated.")
  SET(ENABLE_DOXYGEN NO)
ELSE()
  SET(ENABLE_DOXYGEN YES)
  FIND_PROGRAM(NCXX_DOT NAMES dot)
  IF(NCXX_DOT)
    SET(HAVE_DOT YES)
  ELSE(NCXX_DOT)
    SET(HAVE_DOT NO)
  ENDIF(NCXX_DOT)
ENDIF()

INCLUDE_DIRECTORIES(include)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
IF(ENABLE_DOXYGEN)
  ADD_SUBDIRECTORY(doc)
ENDIF()
